--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   min-height: 100vh;
-  background: linear-gradient(to top right, #1379ff, #6af5ff);
+  background: linear-gradient(to top right, #1379ff, #00cfb4);
 }
 
 .main{
