--- a/frontend/src/styles/DashboardStyles.css
+++ b/frontend/src/styles/DashboardStyles.css
@@ -23,15 +23,24 @@
     font-family: 'Poppins';
     font-size: 56px;
     font-weight: 600;
-    margin: 6% 0 3% 6%;
+    margin: 6% 0 1% 6%;
     text-align: start;
-    
+}
+
+.DashboardSubHeader{
+    color:rgba(0, 110, 255, 0.678);
+    font-family: 'Poppins';
+    font-size: 20px;
+    font-weight: 200;
+    margin: 0% 0 5% 6%;
+    text-align: start;
 }
 
 .CardContainer{
     display: flex;
     width: 100%;
     justify-content: space-evenly;
+    text-align: start;
 }
 
 .DashboardSubHeaderContainer{
@@ -59,4 +68,9 @@
     border-radius: 20px;
     -webkit-box-shadow: 0px 5px 14px -2px rgba(0,0,0,0.67); 
     box-shadow: 0px 5px 14px -2px rgba(0,0,0,0.67);
+}
+
+.DashboardCard:hover{
+    transform: scale(1.02);
+    transition: 0.5s;
 }
