--- a/frontend/src/styles/IngredientsStyles.css
+++ b/frontend/src/styles/IngredientsStyles.css
@@ -13,3 +13,43 @@
     padding: 0 10%;
     margin: 15% 0 3% 0;
 }
+
+.HeaderContainer{
+    width: 90%;
+    margin-top: 3%;
+    height: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    gap: 10px;
+    margin: 3% auto 0 auto;
+}
+
+.ProductHeader {
+    text-align: left;
+    color:rgb(41, 41, 41);
+    font-family: 'Poppins';
+    font-size: 82px;
+    font-weight: 600;
+}
+
+.IngredientsResultSubHeader{
+    color:rgb(41, 41, 41);
+    font-family: 'Poppins';
+    text-align: left;
+    margin: 2% 0 0 0;
+}
+
+.IngredientsIcon{
+    height: 50px;
+}
+
+.AllergyAlert{
+    width: fit-content;
+    height: fit-content;
+    padding: 0.5rem 2rem;
+    margin-top: 1%;
+    margin-bottom: 0;
+}
